objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <color>#3333FF</color>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Under consideration</fullName>
                    <color>#FF9900</color>
                    <label>Under consideration</label>
                </value>
                <value>
                    <fullName>Study completed -  budget validation pending</fullName>
                </value>
                <value>
                    <fullName>Approved - Implement / In Scope</fullName>
                    <color>#009900</color>
                    <label>Approved - Implement / In Scope</label>
                </value>
                <value>
                    <fullName>In Design</fullName>
                </value>
                <value>
                    <fullName>In Build</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In discussion / specifying</fullName>
                    <color>#EFAE73</color>
                    <label>In discussion / specifying</label>
                </value>
                <value>
                    <fullName>Needs arbitration</fullName>
                    <color>#CC33CC</color>
                    <label>Needs arbitration</label>
                </value>
                <value>
                    <fullName>Feasilbility issue</fullName>
                    <color>#CC0000</color>
                    <label>Feasilbility issue</label>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                    <color>#3366FF</color>
                    <label>Postponed</label>
                </value>
                <value>
                    <fullName>Closed - Implemented</fullName>
                    <color>#33CC00</color>
                    <label>Closed - Implemented</label>
                </value>
                <value>
                    <fullName>Closed - Rejected / Out of Scope</fullName>
                    <color>#000000</color>
                    <label>Closed - Rejected / Out of Scope</label>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not feasible</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Specifications__c</fullName>
        <description>Please add any detail on the technical specifications</description>
        <inlineHelpText>Please add any detail on the technical specifications</inlineHelpText>
        <label>Technical Specifications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <description>Please add any detail on the test case</description>
        <inlineHelpText>Please add any detail on the test case</inlineHelpText>
        <label>Test Case</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Please classify the requirement into a topic</description>
        <inlineHelpText>Please classify the requirement into a topic</inlineHelpText>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Visibility/Sharing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimate__c</fullName>
        <description>Total estimation in hours of all phases and requirements</description>
        <inlineHelpText>Total estimation in hours of all phases and requirements</inlineHelpText>
        <label>Total Estimate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <description>Please rate the total priority ranking (1 is the highest value, 3 is the lowest)</description>
        <inlineHelpText>Please rate the total priority ranking (1 is the highest value, 3 is the lowest)</inlineHelpText>
        <label>Total Priority Ranking</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Train_Deploy__c</fullName>
        <description>Estimation in hours of the train/deploy phase</description>
        <inlineHelpText>Estimation in hours of the train/deploy phase</inlineHelpText>
        <label>Train/Deploy</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeNew__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent bug</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type to be deleted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evolution</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Candidate for next release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <description>Estimation in hours of the UAT phase</description>
        <inlineHelpText>Estimation in hours of the UAT phase</inlineHelpText>
        <label>UAT</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Please rate the urgency of request value priority (1 is the highest value, 3 is the lowest)</description>
        <inlineHelpText>Please rate the urgency of request value priority (1 is the highest value, 3 is the lowest)</inlineHelpText>
        <label>Urgency of Request Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <label>Urgency of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Communication_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please indicate if communication to end-users is needed.  If so, please detail in the field below</description>
        <inlineHelpText>Please indicate if communication to end-users is needed.  If so, please detail in the field below</inlineHelpText>
        <label>User Communication Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Please rate the urgency of request value priority (1 is the highest value, 3 is the lowest)</description>
        <inlineHelpText>Please rate the urgency of request value priority (1 is the highest value, 3 is the lowest)</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <label>User Impact of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links request (or requirement) to a user story</description>
        <inlineHelpText>Links request (or requirement) to a user story</inlineHelpText>
        <label>User Story</label>
        <referenceTo>UserStories__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <description>If this request originated from a workshop, please indicate the name</description>
        <inlineHelpText>If this request originated from a workshop, please indicate the name</inlineHelpText>
        <label>Workshop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfdc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change Request to be discussed with salesforce.com</description>
        <inlineHelpText>Either for feasability study or to follow-up implementation.
Can be used for both support and services</inlineHelpText>
        <label>sfdc</label>
        <type>Checkbox</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Title__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Status__c</columns>
        <columns>MarkasCritical__c</columns>
        <columns>Critical_Flag__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>SR-048319</value>
        </filters>
        <label>Req MSN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllChangeRequests</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>ExpectedBenefitsBusinessImpact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Change_Request</value>
        </filters>
        <label>All Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDecisions</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project__c</columns>
        <columns>Owner__c</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>ExpectedBenefitsBusinessImpact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Floorwalking,Request__c.Decision</value>
        </filters>
        <label>All Decisions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDefects</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>ExpectedBenefitsBusinessImpact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Defect</value>
        </filters>
        <label>All Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllFloorwalking</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>ExpectedBenefitsBusinessImpact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Floorwalking</value>
        </filters>
        <label>All Floorwalking</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllIssues</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Critical_Flag__c</columns>
        <columns>Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Issue</value>
        </filters>
        <label>All Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllRequirements</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Description__c</columns>
        <columns>ExpectedBenefitsBusinessImpact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Requirement</value>
        </filters>
        <label>All Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllRisks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Impact__c</columns>
        <columns>Probability__c</columns>
        <columns>Risk_Score__c</columns>
        <columns>Critical_Flag__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Owner__c</columns>
        <columns>Original_Requestor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Risk</value>
        </filters>
        <label>All Risks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllSupportRequests</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project__c</columns>
        <columns>Original_Requestor__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <columns>ExpectedBenefitsBusinessImpact__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Support_Request</value>
        </filters>
        <label>All Support Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Risks_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Detection_Date__c</columns>
        <columns>Impact__c</columns>
        <columns>Owner__c</columns>
        <columns>Probability__c</columns>
        <columns>Risk_Score__c</columns>
        <columns>Status__c</columns>
        <columns>Risk_Category__c</columns>
        <columns>Critical_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Risk,Request__c.Issue</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Risks &amp; Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Requests_OPEN</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>MarkasCritical__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>Fast_Change__c</columns>
        <columns>Critical_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Change_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PMO_Critical_requests</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Detection_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MarkasCritical__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Issue,Request__c.Risk</value>
        </filters>
        <label>PMO Critical Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SR0Risks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Impact__c</columns>
        <columns>Probability__c</columns>
        <columns>Risk_Score__c</columns>
        <columns>Critical_Flag__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Owner__c</columns>
        <columns>Original_Requestor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Detection_Date__c</columns>
        <columns>Expected_Due_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Risk</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>SOL</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>SR0 Risks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SR0_Requirements</fullName>
        <columns>Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Workshop__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>ConfigEffort__c</columns>
        <columns>DevEffort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Requirement</value>
        </filters>
        <label>SR0 Requirements</label>
        <language>en_US</language>
        <sharedTo>
            <group>SR0DesignBuildteam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SR0_open_requests</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>SR0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Change_Request,Request__c.Issue,Request__c.Defect</value>
        </filters>
        <label>SR0 open requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Change_Request</fullName>
        <active>true</active>
        <description>Use this to request a change in the application.  Change requests can also be linked to Ideas</description>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decision</fullName>
        <active>true</active>
        <description>Used to log a decision that needs to be made and associate the criticity and priority</description>
        <label>Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>true</active>
        <description>Use this to log a defect found during UAT phases in the application.</description>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Floorwalking</fullName>
        <active>true</active>
        <description>Used to record user comments and feedback from the field during hyper care</description>
        <label>Floorwalking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>Used to log an issue that needs to be communicated and associate the priority and severity</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <description>Used to submit a requirement.  Can be linked to a user story</description>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Used to log a risk and associate a criticity in order to make visible to a management audience</description>
        <label>Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Request</fullName>
        <active>true</active>
        <description>Used to request support on a particular process or feature within the application</description>
        <label>Support Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RQ01_Satisfaction_Validation</fullName>
        <active>true</active>
        <description>Makes sure user cannot enter a number greater than 10</description>
        <errorConditionFormula>Satisfaction__c &gt;10</errorConditionFormula>
        <errorMessage>Please enter a number between 1 and 10.  1 being most unsatisfied and 10 being most satisfied</errorMessage>
    </validationRules>
</CustomObject>